<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pale / Super Pale"
        android:padding="20dp"
        android:textColor="@color/Black"
        android:textStyle="bold"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        >
        <RadioButton
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preguntar_siempre"
            />
        <RadioButton
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usar_ultima_seleccion"
            />
        <RadioButton
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usar_pale"
            />
        <RadioButton
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usar_super_pale"
            />
    </RadioGroup>
    <TextView
        android:textColor="@color/Red"
        android:layout_marginBottom="15dp"
        android:id="@+id/pale_click_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAlignment="textEnd"
        android:paddingRight="15dp"
        />
</LinearLayout>