<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CashMatchActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar12"
        android:background="@color/green_200"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <EditText
        android:layout_marginLeft="10dp"
        android:layout_below="@id/toolbar12"
        android:clickable="true"
        android:editable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datepickercash1"

        android:layout_marginRight="20dp"
        android:hint="10/1/2020"
        />
    <EditText
        android:layout_marginLeft="10dp"
        android:layout_below="@id/toolbar12"
        android:clickable="true"
        android:editable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datepickercash2"
        android:layout_toRightOf="@+id/datepickercash1"
        android:layout_marginRight="20dp"
        android:hint="10/1/2020"
        />
    <ImageView
        android:layout_marginLeft="10dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_search_black_24dp"
        android:layout_below="@id/toolbar12"
        android:layout_toRightOf="@id/datepickercash2"
        android:layout_marginTop="5dp"
        />
    <ImageView
        android:layout_marginLeft="10dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_add_circle_outline_black_24dp"
        android:layout_below="@id/toolbar12"
        android:layout_toRightOf="@id/datepickercash2"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        />
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/datepickercash2"
        android:text="LA CONFIANCE BORLETTE"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:id="@+id/headertext"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headertext"
        android:text="DOMI POV LEVE RICH"
        android:textSize="15sp"
        android:textAlignment="center"
        android:id="@+id/headertext2"
        />
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/overlay_dark_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headertext2"
        android:text="@string/balnce"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textStyle="bold"
        android:id="@+id/balance_text"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/balance_text"
        android:text="Resumen por Loteries"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textStyle="bold"
        android:id="@+id/dummy"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dummy"
        android:text="Resumen General"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textStyle="bold"
        android:id="@+id/dummy2"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dummy2"
        android:text="@string/hisab"
        android:textAlignment="center"
        android:id="@+id/hisab"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hisab"
        android:text="@string/balance"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/Black"
        />


</RelativeLayout>